--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -138,7 +138,7 @@ EXTRAS
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container p-0">
         <div class="card border-0 bg-body-tertiary mt-4 text-center text-sm-start ">
             <div class="card-body p-4 prenota">
                 <h1 class="card-title fw-light">New Hope Travels</h1>
@@ -280,22 +280,42 @@ EXTRAS
         </div>
 
         <!-- Offerta del giorno -->
-        <h5 class="my-4">Offerta del giorno</h5>
-        <div class="row">
-            <img class="col-8 shadow p-0" src="./assets/imgs/luogo2.jpg" alt="luogo2">
-            <div class="col-4">
-                <h1 class="fw-light">New York</h1>
+        <div class="d-none d-sm-block">
+            <h5 class="my-4">Offerta del giorno</h5>
+            <div class="row ">
 
-                <p>Volo e viaggio organizzato a partire da 500€, posti limitati</p>
+                <div class="col-8  p-0 shadow">
+                    <div class="card">
+                        <img class="card-img" src="./assets/imgs/luogo2.jpg" alt="luogo1">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <h1 class="fw-light">New York</h1>
+                    <p class="font-monospace"> dal 15-02-2023 al 22-02-2023</p>
+                    <p>Volo e viaggio organizzato a partire da <span class="lead">500€</span>, posti limitati</p>
+                    <span class="badge rounded-pill text-bg-dark">Best offer</span>
+                </div>
             </div>
         </div>
+        <!-- last minute -->
+        <!-- <div class="mt-4" id="lastMinute">
+            <h5>Last Minute</h5>
+            <div class="d-flex">
+                <div class="card p-0 "><img src="./assets/imgs/luogo3.jpg" alt="luogo3"></div>
 
+            </div>
+         -->
+    </div>
+    <!-- footer -->
+    <footer class="bg-dark text-bg-dark text-center mt-5 py-2">
+        <button class="btn btn-outline-secondary mt-5 fw-light">Contattaci</button>
+        <p class="mt-4 mb-4 fw-light">© 2023 New Hope Travels All Rights Reserved</p>
+    </footer>
 
-
-        <!-- BOOTSTRAP JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
 
