--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -286,7 +286,7 @@ EXTRAS
 
                 <div class="col-8  p-0 shadow">
                     <div class="card">
-                        <img class="card-img" src="./assets/imgs/luogo2.jpg" alt="luogo1">
+                        <img class="rounded" src="./assets/imgs/luogo2.jpg" alt="luogo1">
                     </div>
                 </div>
                 <div class="col-4">
