fix margin image offerta del giorno

--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -138,7 +138,7 @@ EXTRAS
             </div>
         </div>
     </nav>
-    <div class="container p-0">
+    <div class="container mx-sm- p-0">
         <div class="card border-0 bg-body-tertiary mt-4 text-center text-sm-start ">
             <div class="card-body p-4 prenota">
                 <h1 class="card-title fw-light">New Hope Travels</h1>
@@ -282,14 +282,12 @@ EXTRAS
         <!-- Offerta del giorno -->
         <div class="d-none d-sm-block">
             <h5 class="my-4">Offerta del giorno</h5>
-            <div class="row ">
+            <div class="row ms-2">
 
-                <div class="col-8  p-0 shadow">
-                    <div class="card">
-                        <img class="rounded" src="./assets/imgs/luogo2.jpg" alt="luogo1">
-                    </div>
+                <div class="col-6 p-0 m-0 ">
+                    <img class="w-100 rounded shadow" src="./assets/imgs/luogo2.jpg" alt="luogo1">
                 </div>
-                <div class="col-4">
+                <div class="col-6 ps-4">
                     <h1 class="fw-light">New York</h1>
                     <p class="font-monospace"> dal 15-02-2023 al 22-02-2023</p>
                     <p>Volo e viaggio organizzato a partire da <span class="lead">500€</span>, posti limitati</p>
@@ -302,10 +300,23 @@ EXTRAS
             <h5>Last Minute</h5>
             <div class="d-flex">
                 <div class="card p-0 "><img src="./assets/imgs/luogo3.jpg" alt="luogo3"></div>
-
             </div>
          -->
+        <h5 class="my-4">Dicono di noi</h5>
+        <div class="comments">
+            <div class="row">
+                <div class="col-4 "><img src="./assets/imgs/image07.jpeg" alt=""></div>
+                <div class="col-8">
+                    <p>username</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere architecto quas blanditiis, cum
+                        id porro vero laborum ex saepe, veniam, rem qui dolore? Temporibus exercitationem laudantium ut
+                        quibusdam suscipit obcaecati.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
+
     <!-- footer -->
     <footer class="bg-dark text-bg-dark text-center mt-5 py-2">
         <button class="btn btn-outline-secondary mt-5 fw-light">Contattaci</button>
